Design + Render list added

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 
 <body>
-    <div id="todo">
-        TODO LIST
+    <div id="todo" class="container">
+        <form class="form">
+            New Task Form
+        </form>
     </div>
-
+    <script src="./js/data/todos.js"></script>
     <script src="./js/todo.js"></script>
 </body>
 
