--- a/index.html
+++ b/index.html
@@ -8,27 +8,18 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     </head>
-    
-    <body>
-        <!-- < id="todo" class="container"> -->
-            <!-- <div id="todo" class="container">
-            <form class="form">
-                NEW TASK FORM
-            </form>
+<body>
+    <div id="todo" class="container">
+        <div class="global-actions">
+            <div class="action remove">Remove all</div>
         </div>
-        </div> -->
-    
-            <div class="btn" data-number="1" data-color="red">Pirmas tekstas</div>
-            <div class="btn" data-number="2" data-color="blue">Antras visai kitoks...</div>
-            <div class="btn" data-number="3">Trecias</div>
-            <div class="btn" data-number="4">Ketvirtas</div>
-            <div class="btn" data-number="5">Penktas</div>
-            <div class="btn" data-number="6">Sestas</div>
-            <div class="btn" data-number="7">Septintas</div>
-            <div class="btn" data-number="8">Astuntas</div>
-    <!-- <script src="./js/data/todos.js"></script>
-        <script src="./js/todo.js"></script> -->
-        <script src="./js/eventsForLoops.js"></script>
-    </body>            
+        <form class="form">
+            NEW TASK FORM
+        </form>
+    </div>
+    </div>
+    <script src="./js/data/todos.js"></script>
+    <script src="./js/todo.js"></script>
+</body>
 
 </html>
