--- a/index.html
+++ b/index.html
@@ -14,12 +14,24 @@
             <div class="action remove">Remove all</div>
         </div>
         <form class="form">
-            NEW TASK FORM
-        </form>
+            <fieldset>
+                <label for="task">Task</label>
+                <textarea name="task"></textarea>
+            </fieldset>
+            <fieldset>
+                <label for="deadline">Deadline</label>
+                <input type="text" name="deadline"  placeholder="YYYY-MM-DD HH-MM">
+            </fieldset>
+            <div class="actions">
+                <div class="btn add">Add new</div>
+                <div class="btn clear">Clear form</div>
+            </div>
+</form>
     </div>
     </div>
     <script src="./js/data/todos.js"></script>
     <script src="./js/todo.js"></script>
+
 </body>
 
 </html>
