remake of todo.js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>ToDo List</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    </head>
+</head>
 <body>
     <div id="todo" class="container">
         <div class="global-actions">
@@ -20,17 +20,17 @@
             </fieldset>
             <fieldset>
                 <label for="deadline">Deadline</label>
-                <input type="text" name="deadline"  placeholder="YYYY-MM-DD HH-MM">
+                <input type="text" name="deadline" placeholder="YYYY-MM-DD HH-MM">
             </fieldset>
             <div class="actions">
                 <div class="btn add">Add new</div>
                 <div class="btn clear">Clear form</div>
             </div>
-</form>
+        </form>
     </div>
     </div>
     <script src="./js/data/todos.js"></script>
-    <script src="./js/todo.js"></script>
+    <script src="./js/todoRemake.js"></script>
 
 </body>
 
